--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
         <title>My App</title>
     </head>
     <body>
-        This is my app!
-        Login Form
+        This app!
     </body>
 </html>
